--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,12 +1,12 @@
 // fonts
 $sans-serif: 'Helvetica Neue', Arial, sans-serif;
-$serif: 'Georgia', serif;
+$serif: 'Times New Roman', 'Georgia', serif;
 
 // colors
 $near-black: #0d0d0d;
-$warm-yellow: #ffcc00;
-$film-card-gray: #404040;
-$year-tag-gray: #595959;
+$warm-yellow: #e6b800;
+$film-card-gray: #272727;
+$year-tag-gray: #1A1A1A;
 $dark-gray: #737373;
 $off-white: #f2f2f2;
 $aquamarine: #00b3b3;
@@ -81,11 +81,19 @@ p {
   }
 }
 
+// Film Card wrapper
+.film-card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 824px;
+  margin: 0 auto;
+}
+
 // Film Card
 .film-card {
   position: relative;
   display: flex;
-  margin: 0 auto;
   justify-content: space-between;
   align-items: flex-start;
   padding: 0;
@@ -104,7 +112,7 @@ p {
 
   .film-details {
     display: block;
-    min-width: 139px;
+    min-width: 138px;
     padding-top: 16px;
 
     .director {
@@ -112,25 +120,26 @@ p {
       text-transform: uppercase;
       color: $warm-yellow;
       margin-bottom: 4px;
+      font-weight: 500;
     }
 
     .title {
       font-family: $serif;
       color: #f2f2f2;
-      font-size: 18px;
-      font-weight: 700;
+      font-size: 24px;
+      line-height: 28px;
+      font-weight: 500;
     }
   }
 
 
-
   .year {
     display: block;
-    // position: absolute;
     width: 49px;
     height: 20px;
     padding: 8px;
     transform: rotate(-270deg);
+    margin-top: 32px;
     background-color: $year-tag-gray;
 
     p {
