--- a/styles/app.scss
+++ b/styles/app.scss
@@ -28,6 +28,27 @@ p {
   color: $near-black;
 }
 
+.filter-page {
+  .close {
+    position: absolute;
+    top: 12px;
+    right: 32px;
+    font-size: 24px;
+  }
+
+  &.hidden {
+    display: none;
+  }
+
+  z-index: 1;
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $off-white;
+}
+
 .no-results {
   color: $off-white;
   margin: 64px auto 0px auto;
@@ -35,6 +56,8 @@ p {
 }
 
 .navigation {
+  z-index: 0;
+  position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -64,6 +87,8 @@ p {
 }
 
 .slide-container {
+  z-index: 0;
+  position: relative;
   width: 100%;
   height: auto; // todo make responsive
 }
@@ -73,7 +98,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto 24px;
+  margin: 24px auto 24px;
   color: $off-white;
   font-family: $sans-serif;
   text-transform: uppercase;
@@ -89,7 +114,7 @@ p {
   }
 }
 
-.listings-header h2 {
+.listings-header {
     margin: 0;
 }
 
@@ -116,7 +141,7 @@ p {
 
   .label {
     text-transform: capitalize;
-    color: $off-white;
+    color: $near-black;
   }
 
   select {
