--- a/styles/app.scss
+++ b/styles/app.scss
@@ -63,6 +63,7 @@ p {
   align-items: center;
   height: 73px;
   padding: 8px 0 8px 24px;
+  font-family: $sans-serif;
   font-weight: 500;
 
   h1 {
@@ -70,18 +71,24 @@ p {
     padding: 0;
     width: 100px;
     font-size: 16px;
-    font-family: $sans-serif;
     font-weight: 400;
     color: $off-white;
     text-transform: uppercase;
   }
 
   p {
+    margin-bottom: 0;
     color: $off-white;
     text-transform: uppercase;
+    margin-right: 40px;
+  }
 
-    &:not(:last-of-type) {
-      margin-right: 40px;
+  form {
+    label {
+      color: $off-white;
+      text-transform: uppercase;
+      margin-right: 10px;
+      line-height: 24px;
     }
   }
 }
