--- a/styles/app.scss
+++ b/styles/app.scss
@@ -5,6 +5,7 @@ $sans-serif: 'Helvetica Neue', Arial, sans-serif;
 $serif: 'Times New Roman', 'Georgia', serif;
 
 // colors
+$white: #ffffff;
 $near-black: #0d0d0d;
 $warm-yellow: #e6b800;
 $film-card-gray: #272727;
@@ -29,29 +30,33 @@ p {
 }
 
 .filter-page {
-  .close {
-    position: absolute;
-    top: 12px;
-    right: 32px;
-    font-size: 24px;
-  }
-
-  &.hidden {
-    display: none;
-  }
-
   z-index: 1;
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: $off-white;
+  background-color: $white;
+
+  .close {
+    position: absolute;
+    top: 12px;
+    right: 32px;
+    font-size: 24px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &.hidden {
+    display: none;
+  }
 }
 
 .no-results {
   color: $off-white;
-  margin: 64px auto 0px auto;
+  margin: 64px auto 24px auto;
   text-align: center;
 }
 
@@ -83,12 +88,30 @@ p {
     margin-right: 40px;
   }
 
+  /* Search */
   form {
     label {
       color: $off-white;
       text-transform: uppercase;
       margin-right: 10px;
       line-height: 24px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    input {
+      color: $off-white;
+      background-color: $near-black;
+      border: none;
+      font-size: 18px;
+      line-height: 26px;
+      letter-spacing: 0.75px;
+
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
@@ -125,13 +148,37 @@ p {
     margin: 0;
 }
 
+.results-count {
+  color: $off-white;
+  max-width: 824px;
+  margin: 0 auto;
+  margin-bottom: 16px;
+
+  .number {
+    font-weight: 500;
+  }
+}
+
 // Filter Bar
 .filter-bar {
-  margin: 0 auto 12px auto;
+  margin: 64px auto 12px auto;
   width: 100%;
   height: 100px;
   padding: 12px;
   align-items: center;
+
+  p {
+    font-family: "Montserrat", Arial, sans-serif;
+  }
+
+  .heading {
+    color: #8E8E8E;
+    font-weight: 500;
+    text-transform: uppercase;
+    display: block;
+    text-align: center;
+    margin: 0 auto 32px;
+  }
 
   .dropdown-container {
     display: flex;
@@ -160,7 +207,7 @@ p {
   }
 
   &:not(:last-of-type) {
-    margin-right: 12px;
+    margin-right: 32px;
   }
 }
 
