--- a/styles/app.scss
+++ b/styles/app.scss
@@ -29,6 +29,10 @@ p {
   color: $near-black;
 }
 
+.page-title {
+  color: $white;
+}
+
 .filter-page {
   z-index: 1;
   display: block;
@@ -88,7 +92,7 @@ p {
     margin-right: 40px;
   }
 
-  /* Search */
+  /* Search + Login */
   form {
     label {
       color: $off-white;
@@ -111,6 +115,17 @@ p {
 
       &:focus {
         outline: none;
+      }
+    }
+  }
+
+  .login-wrapper {
+    form {
+      display: flex;
+      
+      input {
+        background-color: $white;
+        color: $near-black;
       }
     }
   }
