--- a/styles/app.scss
+++ b/styles/app.scss
@@ -33,6 +33,48 @@ p {
   color: $white;
 }
 
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: $near-black;
+  opacity: 95%;
+  display: flex;
+}
+
+.login-modal {
+  position: absolute;
+  top: calc(50% - 100px);
+  left: calc(50% - 100px);
+  background: $white;
+  z-index: 2;
+  padding: 16px;
+  font-family: $sans-serif;
+  width: 200px;
+  height: 200px;
+  border-top: 3px solid $warm-yellow;
+
+  h1 {
+    font-size: 24px;
+    line-height: 28px;
+    margin: 0 0 24px 0;
+    font-weight: 400;
+  }
+
+  form {
+
+    input {
+      background-color: $white;
+      color: $near-black;
+      margin-bottom: 16px;
+    }
+
+  }
+}
+
 .filter-page {
   z-index: 1;
   display: block;
@@ -119,14 +161,11 @@ p {
     }
   }
 
-  .login-wrapper {
-    form {
-      display: flex;
-      
-      input {
-        background-color: $white;
-        color: $near-black;
-      }
+  .sign-in {
+    text-decoration: underline;
+
+    &:hover {
+      cursor: pointer;
     }
   }
 }
