Updates user watch list on film card click

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -217,12 +217,22 @@ p {
   .my-list {
     h2, .no-results {
       width: 824px;
-      margin: 24px auto 24px;
+      margin: 24px;
     }
 
     .no-results {
       text-align: left;
       font-size: 18px;
+    }
+
+    .films-wrapper {
+      display: flex;
+      margin: 16px 24px 0;
+      overflow: scroll;
+
+      .film-card:not(:last-of-type) {
+        margin-right: 24px;
+      }
     }
   }
 
@@ -233,7 +243,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 24px auto 24px;
+  margin: 32px auto 24px;
 
   button {
     height: 56px;
