--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,19 +1,17 @@
-@import "react-slideshow-image/dist/styles.css";
+@use 'base/colors' as *;
+@use 'base/fonts' as *;
 
-// fonts
-$sans-serif: 'Helvetica Neue', Arial, sans-serif;
-$serif: 'Times New Roman', 'Georgia', serif;
+@use 'components/login';
+@use 'components/navigation';
+@use 'components/film_card';
+@use 'components/filter';
+@use 'components/filter_bar';
+@use 'components/all_films';
+@use 'components/filter_page';
+@use 'components/filter_heading';
+@use 'components/my_list';
 
-// colors
-$white: #ffffff;
-$near-black: #0d0d0d;
-$warm-yellow: #e6b800;
-$film-card-gray: #272727;
-$year-tag-gray: #1A1A1A;
-$dark-gray: #737373;
-$off-white: #f2f2f2;
-$error-orange: #ff8533;
-$aquamarine: #00b3b3;
+@import 'react-slideshow-image/dist/styles.css';
 
 // App-wide
 body {
@@ -34,172 +32,6 @@ p {
   color: $white;
 }
 
-.modal-wrapper {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  background-color: $near-black;
-  opacity: 95%;
-  display: flex;
-}
-
-.login-modal {
-  position: absolute;
-  top: calc(50% - 134px);
-  left: calc(50% - 116px);
-  background: $white;
-  z-index: 2;
-  padding: 16px;
-  font-family: $sans-serif;
-  width: 200px;
-  height: fit-content;
-  border-top: 3px solid $warm-yellow;
-
-  .heading {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 24px;
-
-    p {
-      margin: 0;
-    }
-
-    h1 {
-      font-size: 24px;
-      line-height: 28px;
-      font-weight: 400;
-      margin: 0;
-    }
-
-    .close:hover {
-      cursor: pointer;
-    }
-  }
-
-  .error {
-    text-transform: uppercase;
-    color: $error-orange;
-  }
-
-  form {
-
-    input {
-      background-color: $white;
-      color: $near-black;
-      margin-bottom: 16px;
-    }
-
-  }
-}
-
-.filter-page {
-  z-index: 1;
-  display: block;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: $white;
-
-  .close {
-    position: absolute;
-    top: 12px;
-    right: 32px;
-    font-size: 24px;
-
-    &:hover {
-      cursor: pointer;
-    }
-  }
-
-  &.hidden {
-    display: none;
-  }
-}
-
-.no-results {
-  color: $off-white;
-  margin: 64px auto 24px auto;
-  text-align: center;
-}
-
-.navigation {
-  z-index: 0;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 73px;
-  padding: 8px 0 8px 24px;
-  font-family: $sans-serif;
-  font-weight: 500;
-
-  .left {
-    display: flex;
-    align-items: center;
-  }
-
-  h1 {
-    margin: 0 40px 0 0;
-    padding: 0;
-    width: 100px;
-    font-size: 16px;
-    font-weight: 400;
-    color: $off-white;
-    text-transform: uppercase;
-  }
-
-  p, a {
-    margin-bottom: 0;
-    color: $off-white;
-    text-transform: uppercase;
-    margin-right: 40px;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  /* Search + Login */
-  form {
-    label {
-      color: $off-white;
-      text-transform: uppercase;
-      margin-right: 10px;
-      line-height: 24px;
-
-      &:hover {
-        cursor: pointer;
-      }
-    }
-
-    input {
-      color: $off-white;
-      background-color: $near-black;
-      border: none;
-      font-size: 18px;
-      line-height: 26px;
-      letter-spacing: 0.75px;
-
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-
-  .sign-in {
-    text-decoration: underline;
-
-    &:hover {
-      cursor: pointer;
-    }
-  }
-}
-
 .slide-container {
   z-index: 0;
   position: relative;
@@ -212,213 +44,5 @@ p {
     font-family: $sans-serif;
     color: $off-white;
     text-transform: uppercase;
-  }
-
-  .my-list {
-    h2, .no-results {
-      width: 824px;
-      margin: 24px;
-    }
-
-    .no-results {
-      text-align: left;
-      font-size: 18px;
-    }
-
-    .films-wrapper {
-      display: flex;
-      margin: 16px 24px 0;
-      overflow: scroll;
-
-      .film-card:not(:last-of-type) {
-        margin-right: 24px;
-      }
-    }
-  }
-
-}
-
-.lower-modules-heading {
-  width: 824px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 32px auto 24px;
-
-  button {
-    height: 56px;
-    padding: 0 24px;
-    background-color: transparent;
-    border: 1px solid $off-white;
-    color: $off-white;
-    text-transform: uppercase;
-    font-size: 16px;
-  }
-}
-
-.listings-header {
-    margin: 0;
-}
-
-.results-count {
-  color: $off-white;
-  max-width: 824px;
-  margin: 0 auto;
-  margin-bottom: 16px;
-
-  .number {
-    font-weight: 500;
-  }
-}
-
-// Filter Bar
-.filter-bar {
-  margin: 64px auto 12px auto;
-  width: 100%;
-  height: 100px;
-  padding: 12px;
-  align-items: center;
-
-  p {
-    font-family: "Montserrat", Arial, sans-serif;
-  }
-
-  .heading {
-    color: #8E8E8E;
-    font-weight: 500;
-    text-transform: uppercase;
-    display: block;
-    text-align: center;
-    margin: 0 auto 32px;
-  }
-
-  .dropdown-container {
-    display: flex;
-    justify-content: center;
-  }
-}
-
-// Filter
-.filter {
-  width: 150px;
-  height: 75px;
-  border-radius: 4px;
-  text-align: center;
-
-  .label {
-    text-transform: capitalize;
-    color: $near-black;
-  }
-
-  select {
-    width: 150px;
-    height: 25px;
-    letter-spacing: 0.5px;
-    border-radius: 15px;
-    padding-left: 5px;
-  }
-
-  &:not(:last-of-type) {
-    margin-right: 32px;
-  }
-}
-
-// Film Card wrapper
-.film-card-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 824px;
-  margin: 0 auto;
-}
-
-// Film Card
-.film-card {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 0;
-  width: 100%;
-  max-width: 400px;
-  height: 200px;
-  background-color: $film-card-gray;
-
-  &:not(:last-of-type) {
-    margin-bottom: 16px;
-  }
-
-  p:last-of-type {
-    margin-bottom: 0;
-  }
-
-  .film-details {
-    display: block;
-    min-width: 138px;
-    padding-top: 16px;
-
-    .director {
-      font-size: 12px;
-      text-transform: uppercase;
-      color: $warm-yellow;
-      margin-bottom: 4px;
-      font-weight: 500;
-    }
-
-    .title {
-      font-family: $serif;
-      color: #f2f2f2;
-      font-size: 24px;
-      line-height: 28px;
-      font-weight: 500;
-    }
-  }
-
-  .year {
-    display: block;
-    width: 49px;
-    height: 20px;
-    padding: 8px;
-    transform: rotate(-270deg);
-    margin-top: 32px;
-    background-color: $year-tag-gray;
-
-    p {
-      color: $off-white;
-    }
-  }
-
-  .add-icon {
-    font-weight: 700;
-    color: $off-white;
-    font-size: 20px;
-
-    &:hover {
-      cursor: pointer;
-      color: $warm-yellow;
-    }
-  }
-}
-
-.image-container {
-  width: 200px;
-  height: 200px;
-  background-color: #333333;
-  display: block;
-  margin-right: 12px;
-
-  div {
-    font-family: $sans-serif;
-    background-color: $aquamarine;
-    color: $off-white;
-    padding: 8px;
-    border-radius: 8px;
-    margin-right: 8px;
-  }
-
-  img {
-    max-width: 200px;
-    height: 200px;
-    object-fit: cover;
   }
 }
