Adding responsive styles

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -10,6 +10,7 @@
 @use 'components/filter_page';
 @use 'components/filter_heading';
 @use 'components/my_list';
+@use 'components/slides';
 
 @import 'react-slideshow-image/dist/styles.css';
 
