--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -2,74 +2,115 @@
 @use '../base/fonts' as *;
 
 .navigation {
-  z-index: 0;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 73px;
-  padding: 8px 0 8px 24px;
   font-family: $sans-serif;
-  font-weight: 500;
 
-  .left {
-    display: flex;
-    align-items: center;
-  }
-
-  h1 {
-    margin: 0 40px 0 0;
-    padding: 0;
-    width: 100px;
-    font-size: 16px;
-    font-weight: 400;
-    color: $off-white;
-    text-transform: uppercase;
+  .logo {
+      width: 100px;
+      font-size: 16px;
+      font-weight: 400;
+      color: $off-white;
+      text-transform: uppercase;
   }
 
   p, a {
-    margin-bottom: 0;
     color: $off-white;
     text-transform: uppercase;
-    margin-right: 40px;
+  }
+}
+
+.navigation.mobile {
+  @media only screen and (max-device-width: 768px){
+    display: flex;
+    align-items: center;
+    background-color: $near-black;
+    height: 104px;
+    width: 100vw;
+
+    .hamburger-icon {
+      padding-left: 20px;
+    }
+
+    .logo {
+      margin: 10px auto;
+      font-size: 24px;
+      line-height: 28px;
+    }
   }
 
-  a {
-    text-decoration: none;
+  @media only screen and (min-device-width: 769px){
+    display: none;
+
+  }
+}
+
+.navigation.desktop {
+  @media only screen and (max-device-width: 768px){
+    display: none;
   }
 
-  /* Search + Login */
-  form {
-    label {
-      color: $off-white;
-      text-transform: uppercase;
-      margin-right: 10px;
-      line-height: 24px;
+  @media only screen and (min-device-width: 769px) {
+    z-index: 0;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 73px;
+    padding: 8px 0 8px 24px;
+    font-weight: 500;
+
+    .left {
+      display: flex;
+      align-items: center;
+    }
+
+    .logo {
+      margin: 0 40px 0 0;
+      padding: 0;
+    }
+
+    p, a {
+      margin-bottom: 0;
+      margin-right: 40px;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    /* Search + Login */
+    form {
+      label {
+        color: $off-white;
+        text-transform: uppercase;
+        margin-right: 10px;
+        line-height: 24px;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      input {
+        color: $off-white;
+        background-color: $near-black;
+        border: none;
+        font-size: 18px;
+        line-height: 26px;
+        letter-spacing: 0.75px;
+
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+
+    .sign-in {
+      text-decoration: underline;
 
       &:hover {
         cursor: pointer;
       }
     }
-
-    input {
-      color: $off-white;
-      background-color: $near-black;
-      border: none;
-      font-size: 18px;
-      line-height: 26px;
-      letter-spacing: 0.75px;
-
-      &:focus {
-        outline: none;
-      }
-    }
   }
 
-  .sign-in {
-    text-decoration: underline;
-
-    &:hover {
-      cursor: pointer;
-    }
-  }
 }
