--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -20,26 +20,63 @@
 
 .navigation.mobile {
   @media only screen and (max-device-width: 768px){
-    display: flex;
-    align-items: center;
-    background-color: $near-black;
-    height: 104px;
-    width: 100vw;
+    .top-banner {
+        display: flex;
+        align-items: center;
+        background-color: $near-black;
+        height: 104px;
+        width: 100vw;
 
-    .hamburger-icon {
-      padding-left: 20px;
+        .hamburger-icon {
+          padding-left: 20px;
+        }
+
+        .logo {
+          margin: 10px auto;
+          font-size: 24px;
+          line-height: 28px;
+        }
     }
 
-    .logo {
-      margin: 10px auto;
-      font-size: 24px;
-      line-height: 28px;
+    .full-menu {
+      display: none;
+
+      &.expanded {
+        position: absolute;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        height: 20vh;
+        padding: 32px 0 0 20px;
+        background-color: $near-black;
+        color: $white;
+        font-size: 24px;
+        line-height: 28px;
+
+        a {
+          text-decoration: none;
+
+          &:not(:last-of-type) {
+            padding-bottom: 20px;
+          }
+        }
+
+        .login {
+          margin-top: 75px;
+
+          p {
+            font-size: 24px;
+            line-height: 28px;
+          }
+        }
+
+      }
     }
   }
 
   @media only screen and (min-device-width: 769px){
     display: none;
-
   }
 }
 
