--- a/styles/components/_filter_page.scss
+++ b/styles/components/_filter_page.scss
@@ -3,11 +3,15 @@
 .filter-page {
   z-index: 1;
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 50vh;
   background-color: $white;
+
+  select:hover {
+    cursor: pointer;
+  }
 
   .close {
     position: absolute;
