--- a/styles/components/_my_list.scss
+++ b/styles/components/_my_list.scss
@@ -1,7 +1,10 @@
 .my-list {
   h2, .no-results {
+    @media only screen and (max-device-width: 768px){
+      max-width: 80vw;
+    }
+
     width: 824px;
-    max-width: 100vw;
     margin: 24px;
   }
 
